--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,11 @@
     package="com.frame.projectframe">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--读写-->
+    <!-- 读写 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <!--网络状态-->
+    <!-- 网络状态 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -19,29 +19,30 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <!-- ====================================activity========================================= -->
-        <!--引导页面-->
+        <!-- 引导页面 -->
         <activity
             android:name=".ui.activity.WelcomeActivity"
-            android:theme="@style/ActivityTheme">
+            android:theme="@style/WelcomeTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--登录页面-->
+        <!-- 登录页面 -->
         <activity
             android:name=".ui.activity.login.LoginActivity"
             android:theme="@style/ActivityTheme" />
-        <!--主页面-->
+        <!-- 主页面 -->
         <activity
             android:name=".ui.activity.main.MainActivity"
             android:theme="@style/ActivityTheme" />
         <!-- ====================================service========================================= -->
         <!-- 初始化Service -->
         <service android:name=".component.service.AppIntentService" />
-        <!--apk更新-->
+        <!-- apk更新 -->
         <service android:name=".component.service.UpdateService" />
 
         <meta-data
@@ -50,6 +51,7 @@
         <meta-data
             android:name="design_height"
             android:value="1280" />
+
     </application>
 
 </manifest>
